# imgui-template

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  glfw_demo.cpp  sdl_demo.cpp
src/: CMakeLists.txt  glfw_opengl3_app.cpp  options.hpp  sdl3_renderer3_app.cpp  sdl3_renderer3_app.hpp
